k8s/otc-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otc-backend
  labels:
    app: otc-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otc-backend
  template:
    metadata:
      labels:
        app: otc-backend
    spec:
      containers:
        - name: otc-backend
          image: yvonnetest/otc-docker-backend-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      restartPolicy: Always
