k8s/otc-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otc-frontend
  labels:
    app: otc-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otc-frontend
  template:
    metadata:
      labels:
        app: otc-frontend
    spec:
      containers:
        - name: otc-frontend
          image: yvonnetest/otc-vite-react-frontend-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 2000
      restartPolicy: Always
