k8s/combined-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: otc.com
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: otc-backend-service
            port:
              number: 8000
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
